<resources>
    <string name="app_name">Audio Video Mixer</string>
    <string name="title_activity_video">Video preview</string>
    <string name="title_activity_trim">Trim Video</string>
    <string name="about">About</string>
    <string name="audio_preview_activity">Audio Preview</string>
    <string name="my_media">My Media</string>
    <string name="my_music">My Music</string>
    <string name="my_videos">My Videos</string>
    <string name="my_created_videos">My Created Videos</string>
    <string name="help">Help</string>
    <string name="video_preview">Video Preview</string>
    <string name="video_button">Video Record Button</string>
    <string name="camera_button">Camera Capture Button</string>
    <string name="flip_facing_camera">Flip Facing Camera</string>
    <string name="title_activity_settings">Settings</string>
    <string name="audio_suffix">.mp3</string>
    <string name="video_suffix">.mp4</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="start_time_value">00:00:000</string>
    <string name="image_audio_preview">Image Audio Preview</string>
    <string name="default_title">Default Title</string>
    <string name="start_time_value_2">00.00</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="no_items">No Items</string>
    <string name="no_video_created">No Video Created</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="my_video_editor">My Video Editor</string>
    <string name="created_by_jj">Created by Jakub Jančík</string>
    <string name="app_icon">Application Icon</string>
    <string name="audio_image">Audio Image</string>
    <string name="select_audio">Select Audio</string>
    <string name="select_video">Select Video</string>
    <string name="record_video">Record Video</string>
    <string name="delete">Delete</string>
    <string name="other">Other</string>
    <string name="preview">Preview</string>
    <string name="submit">Submit</string>
    <string name="play">Play</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="audio_is_selected">Audio is selected.</string>
    <string name="audio_selected">Audio Selected</string>
    <string name="retake">retake</string>
    <string name="gallery_recycle_view">Gallery View</string>
    <string name="Audio">audio</string>
    <string name="folder_view">Folder recycle view</string>
    <string name="my_gallery">My Gallery</string>
    <string name="storno">Storno</string>

    <plurals name="numberOfSongsAvailable">
        <!--
             As a developer, you should always supply "one" and "other"
             strings. Your translators will know which strings are actually
             needed for their language. Always include %d in "one" because
             translators will need to use %d for languages where "one"
             doesn't mean 1 (as explained above).
          -->
        <item quantity="one">%d song found</item>
        <item quantity="other">%d songs found</item>
    </plurals>

    <plurals name="numberOfFiles">
        <!--
             As a developer, you should always supply "one" and "other"
             strings. Your translators will know which strings are actually
             needed for their language. Always include %d in "one" because
             translators will need to use %d for languages where "one"
             doesn't mean 1 (as explained above).
          -->
        <item quantity="one">%d file</item>
        <item quantity="other">%d files</item>
    </plurals>


    <plurals name="deleteSelectedItems">
        <!--
             As a developer, you should always supply "one" and "other"
             strings. Your translators will know which strings are actually
             needed for their language. Always include %d in "one" because
             translators will need to use %d for languages where "one"
             doesn't mean 1 (as explained above).
          -->
        <item quantity="one">Delete video</item>
        <item quantity="other">Delete videos</item>
    </plurals>

    <plurals name="numberOfFolders">
        <!--
             As a developer, you should always supply "one" and "other"
             strings. Your translators will know which strings are actually
             needed for their language. Always include %d in "one" because
             translators will need to use %d for languages where "one"
             doesn't mean 1 (as explained above).
          -->
        <item quantity="one">%d folder</item>
        <item quantity="other">%d folders</item>
    </plurals>

    <plurals name="numberOfSelectedFile">
        <!--
             As a developer, you should always supply "one" and "other"
             strings. Your translators will know which strings are actually
             needed for their language. Always include %d in "one" because
             translators will need to use %d for languages where "one"
             doesn't mean 1 (as explained above).
          -->
        <item quantity="one">%d file selected</item>
        <item quantity="other">%d files selected</item>
    </plurals>
</resources>
